# AndroidUtilCode

./: build.gradle  settings.gradle
androidboost/src/main/: AndroidManifest.xml
androidboost/src/main/cpp/: CMakeLists.txt  first.cpp  first.h  hello-boost.cpp  hellojni.c
androiddemos/AudioFocus/: build.gradle
androiddemos/AudioFocus/src/main/: AndroidManifest.xml
androiddemos/AudioHeadSet/: build.gradle
androiddemos/AudioHeadSet/src/main/: AndroidManifest.xml
androiddemos/AudioManagerAdjustVolume/: build.gradle
androiddemos/AudioManagerAdjustVolume/src/main/: AndroidManifest.xml
androiddemos/AudioTrackPlay/: build.gradle
androiddemos/AudioTrackPlay/src/main/: AndroidManifest.xml
androiddemos/Codec-BitmapCodec/: build.gradle
androiddemos/Codec-BitmapCodec/src/main/: AndroidManifest.xml
androiddemos/Codec-JPGCodec/: CMakeLists.txt  ReadMe.md  build.gradle
androiddemos/Codec-JPGCodec/src/androidTest/java/com/luocj/android/jpgdecoder/: ExampleInstrumentedTest.java
androiddemos/Codec-JPGCodec/src/main/: AndroidManifest.xml
androiddemos/Codec-JPGCodec/src/main/cpp/: JpegTest.cpp  JpegTest.h  JpgCodecNativeActivity.cpp  utils.cpp
androiddemos/Codec-JPGCodec/src/main/java/com/luocj/android/jpgdecoder/: JPGDecoderActivity.java
androiddemos/Codec-JPGCodec/src/main/res/layout/: activity_jpgdecoder.xml
androiddemos/Codec-JPGCodec/src/main/res/values/: strings.xml
androiddemos/Codec-JPGCodec/src/test/java/com/luocj/android/jpgdecoder/: ExampleUnitTest.java
androiddemos/Codec-PngCodec/: CMakeLists.txt  ReadMe.md  build.gradle
androiddemos/Codec-PngCodec/png/libpng-1.6.34/: pnglibconf.h  pngrutil.c
androiddemos/Codec-PngCodec/src/androidTest/java/com/example/pngcodec/: ExampleInstrumentedTest.java
androiddemos/Codec-PngCodec/src/main/: AndroidManifest.xml
androiddemos/Codec-PngCodec/src/main/cpp/: PngCodecNativeActivity.cpp  PngTest.cpp  PngTest.h  utils.h
androiddemos/Codec-PngCodec/src/main/java/com/example/pngcodec/: MainActivity.java
androiddemos/Codec-PngCodec/src/main/res/layout/: activity_main.xml
androiddemos/Codec-PngCodec/src/main/res/values/: strings.xml
androiddemos/Codec-PngCodec/src/test/java/com/example/pngcodec/: ExampleUnitTest.java
androiddemos/ColorSlideShow/: build.gradle
androiddemos/ColorSlideShow/src/main/: AndroidManifest.xml
androiddemos/CropSetDemo/: build.gradle  proguard-rules.pro
androiddemos/CropSetDemo/src/main/: AndroidManifest.xml
androiddemos/CtsSmallStructsTest/: build.gradle
androiddemos/CtsSmallStructsTest/src/main/: AndroidManifest.xml
androiddemos/DebugJavaReferene/: build.gradle
androiddemos/DebugJavaReferene/src/main/: AndroidManifest.xml
androiddemos/DialogInputTextview/: build.gradle
androiddemos/DialogInputTextview/src/main/: AndroidManifest.xml
androiddemos/DynamicAdjustVolume/: build.gradle
androiddemos/DynamicAdjustVolume/src/main/: AndroidManifest.xml
androiddemos/HeadSetTracker/: build.gradle
androiddemos/ImageThumbnail/: build.gradle
androiddemos/JsonFile/: build.gradle
androiddemos/MemoryDebug/: CMakeLists.txt  build.gradle
androiddemos/MiaiAudioPlayer/: build.gradle
androiddemos/NativeBroardCast/: CMakeLists.txt  build.gradle
androiddemos/NativeBroardCast/src/androidTest/java/com/example/nativebroardcast/: ExampleInstrumentedTest.java
androiddemos/NativeBroardCast/src/main/: AndroidManifest.xml
androiddemos/NativeBroardCast/src/main/cpp/: NativeBroardCast.cpp
androiddemos/NativeBroardCast/src/main/java/com/example/nativebroardcast/: NativeBroadcastReceiver.java  NativeBroardCastActivity.java
androiddemos/NativeBroardCast/src/main/res/layout/: activity_native_broard_cast.xml
androiddemos/NativeBroardCast/src/main/res/values/: strings.xml
androiddemos/NativeBroardCast/src/test/java/com/example/nativebroardcast/: ExampleUnitTest.java
androiddemos/Notification/: build.gradle
androiddemos/OpenGL2Basic/: CMakeLists.txt  build.gradle
androiddemos/OpenGL2Basic/src/androidTest/java/com/example/opengl2basic/: ExampleInstrumentedTest.java
androiddemos/OpenGL2Basic/src/main/: AndroidManifest.xml
androiddemos/OpenGL2Basic/src/main/cpp/: EGLUtils.h  MyLog.cpp  MyLog.h  OpenGL2Basic.cpp  demo.c
androiddemos/OpenGL2Basic/src/main/java/com/example/opengl2basic/: MainActivity.java
androiddemos/OpenGL2Basic/src/main/res/layout/: activity_main.xml
androiddemos/OpenGL2Basic/src/main/res/values/: strings.xml
androiddemos/OpenGL2Basic/src/test/java/com/example/opengl2basic/: ExampleUnitTest.java
androiddemos/PlayInCallNotification/: build.gradle
androiddemos/PlayRingtone/: build.gradle
androiddemos/RenderScript/: build.gradle  rgb2yuv_480x400_01.yuv
androiddemos/RenderScriptDemo/: build.gradle
androiddemos/ResourceLoader/: build.gradle
androiddemos/SetRingerMode/: build.gradle
androiddemos/SurfacePixelValidator/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake
androiddemos/SurfacePixelValidator/src/androidTest/java/com/example/surfacepixelvalidator/: ExampleInstrumentedTest.java
androiddemos/SurfacePixelValidator/src/main/: AndroidManifest.xml
androiddemos/SurfacePixelValidator/src/main/cpp/: SurfacePixelValidator.cpp  SurfacePixelValidator.h
androiddemos/SurfacePixelValidator/src/main/java/com/example/surfacepixelvalidator/: MainActivity.java
androiddemos/SurfacePixelValidator/src/main/res/layout/: activity_main.xml
androiddemos/SurfacePixelValidator/src/main/res/values/: strings.xml
androiddemos/SurfacePixelValidator/src/main/rs/: PixelCounter.rs  mono.rs
androiddemos/SurfacePixelValidator/src/test/java/com/example/surfacepixelvalidator/: ExampleUnitTest.java
androiddemos/ToastDemo/: build.gradle
androiddemos/app/: build.gradle
androiddemos/gradle/wrapper/: gradle-wrapper.properties
androidmedia/: build.gradle  local.properties
androidmedia/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
nativeutils/: build.gradle
subutil/: build.gradle
utilcode/: build.gradle
(+327 files in other folders)
